02_code1/grade.txt
Grading at Mon Aug 24 15:11:27 UTC 2020
Checking code1.c for legal syntax
temp.c:3:1: error: expected identifier or ‘(’ before numeric constant
 0;276;0c#include <stdio.h>
 ^
temp.c:3:3: error: expected identifier or ‘(’ before numeric constant
 0;276;0c#include <stdio.h>
   ^
temp.c:3:7: error: invalid suffix "c" on integer constant
 0;276;0c#include <stdio.h>
       ^
temp.c:3:7: error: expected identifier or ‘(’ before numeric constant
temp.c:3:9: error: stray ‘#’ in program
 0;276;0c#include <stdio.h>
         ^
temp.c: In function ‘main’:
temp.c:16:34: error: implicit declaration of function ‘max’ [-Werror=implicit-function-declaration]
   printf("max(42, -69) is %d\n", max(42, -69));
                                  ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
